--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
   --red: hsl(0, 100%, 74%);
@@ -15,8 +15,8 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background: url('./images/bg-intro-desktop.png') no-repeat center;
+  font-family: "Poppins", sans-serif;
+  background: url("./images/bg-intro-desktop.png") no-repeat center;
   background-color: var(--red);
   background-size: cover;
   width: 100vw;
@@ -51,15 +51,17 @@ p {
   font-size: 1.05rem;
   opacity: 90%;
 }
-
-h4 {
-  background-color: var(--blue);
-  color: white;
-  text-align: center;
+.header_span {
   padding: 1rem 0;
   border-radius: 1rem;
   box-shadow: 0 15px 15px rgba(0, 0, 0, 0.35);
   margin-bottom: 1.5rem;
+  background-color: var(--blue);
+  color: white;
+}
+
+h4 {
+  text-align: center;
 }
 
 h4 span {
@@ -77,7 +79,6 @@ input {
   display: block;
   width: 100%;
   padding: 1rem 1.5rem;
-  margin-bottom: 1.2rem;
   border: 1px solid var(--grayish-blue);
   border-radius: 0.5rem;
   font-family: inherit;
@@ -93,6 +94,69 @@ input.error {
 input:hover,
 input:focus {
   outline: 1.5px solid var(--blue);
+}
+
+.firstname_input {
+  margin-bottom: 1.2rem;
+  position: relative;
+  padding-bottom: 15px;
+}
+.lastname_input {
+  margin-bottom: 1.2rem;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.email_input {
+  margin-bottom: 1.2rem;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.Password_input {
+  margin-bottom: 1.2rem;
+  position: relative;
+  padding-bottom: 15px;
+}
+em {
+  font-size: 11px;
+  color: var(--red);
+  font-weight: 600;
+  float: right;
+}
+
+.fristname_image {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+ 
+}
+
+.lastName_image {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+}
+
+.email_image {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+}
+.password_image {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+}
+i {
+  position: absolute;
+  top: 20px;
+  right: 50px;
+  cursor: pointer;
+}
+
+.hide {
+  display: none;
 }
 
 button {
@@ -121,4 +185,108 @@ small span {
   color: var(--red);
   font-weight: 600;
   cursor: pointer;
+}
+
+
+
+/* Styling Media */
+@media screen and (max-width: 600px) {
+  body {
+    font-family: "Poppins", sans-serif;
+    background: url("./images/bg-intro-mobile.png") no-repeat center;
+    background-color: var(--red);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+  }
+
+  .container {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  /* styling the first Div */
+
+  h1 {
+    font-size: 2rem;
+    line-height: 1.1;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  /* styling the second Div */
+
+  .header_span {
+    padding: 1rem;
+    text-align: center;
+    font-size: 13px;
+  }
+
+  /* h4,
+  h4 span {
+    width: 80%;
+    margin: auto;
+  } */
+  input {
+    padding: 0.7rem 1.1rem;
+    border: 1px solid var(--grayish-blue);
+    border-radius: 0.2rem;
+  }
+
+  form {
+    margin-top: 1.5rem;
+    padding: 1rem;
+  }
+
+  .firstname_input,
+  .lastname_input,
+  .email_input,
+  .Password_input {
+    margin-bottom: 0.2rem;
+    width: 100%;
+  }
+
+  button {
+    padding: 0.8rem 0;
+    margin-bottom: 0.8rem;
+    width: 100%;
+    border-radius: 0.2rem;
+  }
+
+  small {
+    display: block;
+    text-align: center;
+    width: 90%;
+    margin: auto;
+  }
+  i {
+    position: absolute;
+    top: 15px;
+    right: 40px;
+    cursor: pointer;
+    
+  }
+  em{
+    font-size:.6rem;
+  }
+
+
+  .email_image,
+  .fristname_image,
+  .lastName_image,
+  .password_image {
+    position: absolute;
+    top: 13px;
+    right: 10px;
+   
+  }
 }
