--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ small span {
     justify-content: center;
   }
 
-  /* styling the first Div */
+  /* first Div styles*/
 
   h1 {
     font-size: 2rem;
